Feature: Add ability to update referee contacts in application
