# openapi/openapi.yaml
@@ -696,6 +696,29 @@ paths:
             application/json:
               schema: {$ref: '#/components/schemas/ReferenceRequestDTO'}
   /api/applications/{applicationId}/references/{referenceId}:
+    put:
+      tags: [reference-request-resource]
+      operationId: update
+      parameters:
+      - name: applicationId
+        in: path
+        required: true
+        schema: {type: string, format: uuid}
+      - name: referenceId
+        in: path
+        required: true
+        schema: {type: string, format: uuid}
+      requestBody:
+        content:
+          application/json:
+            schema: {$ref: '#/components/schemas/UpdateReferenceRequestDTO'}
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/ReferenceRequestDTO'}
     delete:
       tags: [reference-request-resource]
       operationId: remove
@@ -2863,6 +2886,7 @@ components:
         jobTitle: {type: string}
         motivation: {type: string}
         projects: {type: string}
+        referenceLettersRequired: {type: integer, format: int32}
         references:
           type: array
           items: {$ref: '#/components/schemas/ReferenceRequestDTO'}
@@ -3951,6 +3975,14 @@ components:
       properties:
         newPassword: {type: string, minLength: 1}
       required: [newPassword]
+    UpdateReferenceRequestDTO:
+      type: object
+      properties:
+        email: {type: string, format: email, maxLength: 320, minLength: 0}
+        firstName: {type: string, maxLength: 255, minLength: 0}
+        lastName: {type: string, maxLength: 255, minLength: 0}
+        title: {type: string, maxLength: 32, minLength: 0}
+      required: [email, firstName, lastName]
     UpdateSlotLocationDTO:
       type: object
       properties:
